--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
 </head>
 <body>
     <div class="container mt-4">
-        <H1>Форма регистрации</H1>
-        <form action="check.php" method="post">
-            <input type="text" class="form-control" name="login" id="login" placeholder="Введите логин"><br>
-            <input type="text" class="form-control" name="name" id="name" placeholder="Введите имя"><br>
-            <input type="password" class="form-control" name="pass" id="pass" placeholder="Введите пароль"><br>
-            <button class="btn btn-success" type="submit">Зарегистрировать</button>
-        </form>
+        <div class="row">
+            <div class="col">
+                <H1>Форма регистрации</H1>
+                <form action="validation-form/check.php" method="post">
+                    <input type="text" class="form-control" name="login" id="login" placeholder="Введите логин"><br>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Введите имя"><br>
+                    <input type="password" class="form-control" name="pass" id="pass" placeholder="Введите пароль"><br>
+                    <button class="btn btn-success" type="submit">Зарегистрировать</button>
+                </form>
+            </div>
+            <div class="col">
+                <H1>Форма авторизации</H1>
+                <form action="validation-form/auth.php" method="post">
+                    <input type="text" class="form-control" name="login" id="login" placeholder="Введите логин"><br>
+                    <input type="password" class="form-control" name="pass" id="pass" placeholder="Введите пароль"><br>
+                    <button class="btn btn-success" type="submit">Авторизоваться</button>
+                </form>
+            </div>
+        </div>
     </div>
 
 </body>
